# Digital-Trackpad

./: .gitignore  README.md  app.py  basic_test.html  pyproject.toml  requirements.txt  simple_test.html  test_app.py  test_app_links.py  test_functionality.py  商品改善計畫.md  市場竟品分析.md  潛在Business Model.md  開發環境啟動及安裝說明書.md
Docs/: Product_Improvement_Plan.md
scripts/: build_windows.ps1
static/: manifest.json  script.js  style.css  sw.js
static/icons/: README.txt
templates/: index.html
